--- a/Pokedex..html
+++ b/Pokedex..html
@@ -34,6 +34,7 @@
             <h2 id="TituloStats"></h2>
             <ul id="stats">
         </ul>
+        <p id="sumaStats"></p>
         <script src="index.js"></script>
         </div>
         </div>
